--- a/sub-10/scripts/recon-all.env
+++ b/sub-10/scripts/recon-all.env
@@ -1,94 +1,98 @@
-Fri Jul 21 16:52:40 EDT 2017
+Fri Jul 21 17:02:08 EDT 2017
 FREESURFER_HOME /Applications/freesurfer
 Actual FREESURFER_HOME /Applications/freesurfer
 /Users/freesurfer_user/Documents/Github/FreeSurfer-Training-Data/sub-10
 setenv SUBJECTS_DIR /Users/freesurfer_user/Documents/Github/FreeSurfer-Training-Data
--s sub-10 -qcache
+-s /Users/freesurfer_user/Documents/Github/FreeSurfer-Training-Data/sub-10 -motioncor
 Darwin CFMI-iMac-06.local 16.6.0 Darwin Kernel Version 16.6.0: Fri Apr 14 16:21:16 PDT 2017; root:xnu-3789.60.24~6/RELEASE_X86_64 x86_64
 
 cputime      unlimited
 filesize     unlimited
 datasize     unlimited
-stacksize    8192 kbytes
+stacksize    65532 kbytes
 coredumpsize 0 kbytes
 memoryuse    unlimited
 descriptors  7168 
 memorylocked unlimited
 maxproc      709 
 
-FSL_BIN=/usr/local/fsl/bin
-TERM_PROGRAM=iTerm.app
-FS_OVERRIDE=0
-SHELL=/bin/bash
-TERM=xterm-256color
-TMPDIR=/var/folders/2f/l99vd9qj6h9762_3ft4nmrt00000gp/T/
-Apple_PubSub_Socket_Render=/private/tmp/com.apple.launchd.RzCQnFROIr/Render
-FSLMULTIFILEQUIT=TRUE
-PERL5LIB=/Applications/freesurfer/mni/lib/../Library/Perl/Updates/5.12.3
-TERM_PROGRAM_VERSION=3.0.15
-OLDPWD=/Users/freesurfer_user/Documents/Github/FreeSurfer-Training-Data-Edits
-TERM_SESSION_ID=w0t2p0:B96A0969-2D84-46A3-8F86-AB501FD8D7E3
-MATLABCMD=/Applications/MATLAB_R2017a.app/bin/maci64/MATLAB
-PYDEF=2.7
-OS=Darwin
-LC_ALL=en_US.UTF-8
-USER=freesurfer_user
-LOCAL_DIR=/Applications/freesurfer/local
-FSLGECUDAQ=cuda.q
-FSFAST_HOME=/Applications/freesurfer/fsfast
-MNI_PERL5LIB=/Applications/freesurfer/mni/lib/../Library/Perl/Updates/5.12.3
-FMRI_ANALYSIS_DIR=/Applications/freesurfer/fsfast
-SSH_AUTH_SOCK=/private/tmp/com.apple.launchd.oE6gLiNWtU/Listeners
-__CF_USER_TEXT_ENCODING=0x1F6:0x0:0x0
-FSF_OUTPUT_FORMAT=.nii.gz
-MINC_BIN_DIR=/Applications/freesurfer/mni/bin
-SUBJECTS_DIR=/Users/freesurfer_user/Documents/Github/FreeSurfer-Training-Data
-PATH=/Applications/freesurfer/bin:/Applications/freesurfer/fsfast/bin:/Applications/freesurfer/tktools:/usr/local/fsl/bin:/Applications/freesurfer/mni/bin:/Users/cfmiadmin0/miniconda2/envs/python3/bin:/usr/local/opt/coreutils/libexec/gnubin:/Applications/freesurfer/bin:/Applications/freesurfer/fsfast/bin:/Applications/freesurfer/tktools:/usr/local/fsl/bin:/Applications/freesurfer/mni/bin:/usr/local/fsl/bin:/usr/local/bin:/usr/local/mICA:/Users/freesurfer_user/bin:/Applications/MATLAB_R2017a.app/bin:/Users/freesurfer_user/.Pokemon-Terminal:/Users/cfmiadmin0/miniconda2/bin:/opt/ogs/bin/darwin-x64:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/opt/X11/bin:/usr/local/abin:/Users/cfmiadmin0/sw/bin:/usr/local/abin
-CONDA_PATH_BACKUP=/usr/local/opt/coreutils/libexec/gnubin:/Applications/freesurfer/bin:/Applications/freesurfer/fsfast/bin:/Applications/freesurfer/tktools:/usr/local/fsl/bin:/Applications/freesurfer/mni/bin:/usr/local/fsl/bin:/usr/local/bin:/usr/local/mICA:/Users/freesurfer_user/bin:/Applications/MATLAB_R2017a.app/bin:/Users/freesurfer_user/.Pokemon-Terminal:/Users/cfmiadmin0/miniconda2/bin:/opt/ogs/bin/darwin-x64:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/opt/X11/bin:/usr/local/abin:/Users/cfmiadmin0/sw/bin:/usr/local/abin
-CFMIDICOMDIR=/Volumes/CFMI-CFS/mnt/CFMI-DICOMS
-CONDA_PREFIX=/Users/cfmiadmin0/miniconda2/envs/python3
-PWD=/Users/freesurfer_user/Documents/Github/FreeSurfer-Training-Data/sub-10
-FUNCTIONALS_DIR=/Applications/freesurfer/sessions
-EDITOR=emacs
-LANG=C
-ITERM_PROFILE=Default
-FSLTCLSH=/usr/local/fsl/bin/fsltclsh
-SGE_ROOT=/opt/ogs
-FSLMACHINELIST=
-XPC_FLAGS=0x0
-MINC_LIB_DIR=/Applications/freesurfer/mni/lib
 FSLREMOTECALL=
-FSLWISH=/usr/local/fsl/bin/fslwish
-XPC_SERVICE_NAME=0
-COLORFGBG=7;0
-HOME=/Users/freesurfer_user
-SHLVL=3
-MNI_DIR=/Applications/freesurfer/mni
+LC_CTYPE=en_US.UTF-8
+SHELL=/bin/bash
+_=/Applications/freesurfer/bin/recon-all
+FS_OVERRIDE=0
+FSLDIR=/usr/local/fsl
+MNI_DATAPATH=/Applications/freesurfer/mni/data
+CONDA_PATH_BACKUP=/usr/local/opt/coreutils/libexec/gnubin:/Applications/freesurfer/bin:/Applications/freesurfer/fsfast/bin:/Applications/freesurfer/tktools:/usr/local/fsl/bin:/Applications/freesurfer/mni/bin:/usr/local/fsl/bin:/usr/local/bin:/usr/local/mICA:/Users/freesurfer_user/bin:/Applications/MATLAB_R2017a.app/bin:/Users/freesurfer_user/.Pokemon-Terminal:/Users/cfmiadmin0/miniconda2/bin:/opt/ogs/bin/darwin-x64:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/opt/X11/bin:/usr/local/abin:/Users/cfmiadmin0/sw/bin:/usr/local/abin
+MACHTYPE=x86_64
+FSLOUTPUTTYPE=NIFTI_GZ
+Apple_PubSub_Socket_Render=/private/tmp/com.apple.launchd.RzCQnFROIr/Render
+PATH=/Applications/freesurfer/bin:/Applications/freesurfer/fsfast/bin:/Applications/freesurfer/tktools:/usr/local/fsl/bin:/Applications/freesurfer/mni/bin:/Applications/freesurfer/bin:/Applications/freesurfer/fsfast/bin:/Applications/freesurfer/tktools:/usr/local/fsl/bin:/Applications/freesurfer/mni/bin:/Users/cfmiadmin0/miniconda2/envs/python3/bin:/usr/local/opt/coreutils/libexec/gnubin:/Applications/freesurfer/bin:/Applications/freesurfer/fsfast/bin:/Applications/freesurfer/tktools:/usr/local/fsl/bin:/Applications/freesurfer/mni/bin:/usr/local/fsl/bin:/usr/local/bin:/usr/local/mICA:/Users/freesurfer_user/bin:/Applications/MATLAB_R2017a.app/bin:/Users/freesurfer_user/.Pokemon-Terminal:/Users/cfmiadmin0/miniconda2/bin:/opt/ogs/bin/darwin-x64:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/opt/X11/bin:/usr/local/abin:/Users/cfmiadmin0/sw/bin:/usr/local/abin
+MINC_LIB_DIR=/Applications/freesurfer/mni/lib
+FMRI_ANALYSIS_DIR=/Applications/freesurfer/fsfast
 FREESURFER_HOME=/Applications/freesurfer
+TERM_PROGRAM_VERSION=3.0.15
+SGE_ROOT=/opt/ogs
+VENDOR=apple
+CFMICFSPATH=/Volumes/CFMI-CFS
+MINC_BIN_DIR=/Applications/freesurfer/mni/bin
+CONN_PATH=/Applications/MATLAB_R2016a.app/toolbox/conn/
+FSLMACHINELIST=
+MATLABCMD=/Applications/MATLAB_R2017a.app/bin/maci64/MATLAB
+SSH_AUTH_SOCK=/private/tmp/com.apple.launchd.oE6gLiNWtU/Listeners
+DISPLAY=/private/tmp/com.apple.launchd.ilT4yI8cDg/org.macosforge.xquartz:0
+RECONALL_MAKE_SUBJECT=sub-10
 SPM_PATH=/Applications/MATLAB_R2016a.app/toolbox/spm12/
+PWD=/Users/freesurfer_user/Documents/Github/FreeSurfer-Training-Data/sub-10
+SUBJECTS_DIR=/Users/freesurfer_user/Documents/Github/FreeSurfer-Training-Data
+FUNCTIONALS_DIR=/Applications/freesurfer/sessions
+FSLMULTIFILEQUIT=TRUE
+HOME=/Users/freesurfer_user
+PERL5LIB=/Applications/freesurfer/mni/lib/../Library/Perl/Updates/5.12.3
+LOGNAME=freesurfer_user
+CONDA_DEFAULT_ENV=python3
+XPC_FLAGS=0x0
+FSLGECUDAQ=cuda.q
+OSTYPE=darwin
+SHLVL=4
+MNI_PERL5LIB=/Applications/freesurfer/mni/lib/../Library/Perl/Updates/5.12.3
+LOCAL_DIR=/Applications/freesurfer/local
+OMP_NUM_THREADS=1
+USER=freesurfer_user
+TERM_SESSION_ID=w0t2p0:B96A0969-2D84-46A3-8F86-AB501FD8D7E3
+OLDPWD=/Users/freesurfer_user/Documents/Github/FreeSurfer-Training-Data-Edits
+TERM_PROGRAM=iTerm.app
+TMPDIR=/var/folders/2f/l99vd9qj6h9762_3ft4nmrt00000gp/T/
+OS=Darwin
+FSLLOCKDIR=
+REQUIRE_FS_MATCH=0
+PYTHONPATH=/Users/freesurfer_user/miniconda2/bin:/usr/local/bin:/usr/local/mICA:/Users/freesurfer_user/bin:/Applications/MATLAB_R2017a.app/bin:/Users/freesurfer_user/.Pokemon-Terminal:/Users/cfmiadmin0/miniconda2/bin:/opt/ogs/bin/darwin-x64:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/opt/X11/bin:/usr/local/abin:/Users/cfmiadmin0/sw/bin:/usr/local/abin
+MAKEFLAGS=
+MFLAGS=
+FSL_DIR=/usr/local/fsl
+XPC_SERVICE_NAME=0
 CONDA_PS1_BACKUP=\[\e[33m\]\d \@ ⚡️ \[\e[34m\u\]\[\e[1;37m @ \]\[\e[31m\H\]: \[\e[1;36m\w\]\n\[^[(B^[[m\]   ⚛️  
 ITERM_SESSION_ID=w0t2p0:B96A0969-2D84-46A3-8F86-AB501FD8D7E3
-LOGNAME=freesurfer_user
-PYTHONPATH=/Users/freesurfer_user/miniconda2/bin:/usr/local/bin:/usr/local/mICA:/Users/freesurfer_user/bin:/Applications/MATLAB_R2017a.app/bin:/Users/freesurfer_user/.Pokemon-Terminal:/Users/cfmiadmin0/miniconda2/bin:/opt/ogs/bin/darwin-x64:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/opt/X11/bin:/usr/local/abin:/Users/cfmiadmin0/sw/bin:/usr/local/abin
-CFMICFSPATH=/Volumes/CFMI-CFS
-FSLDIR=/usr/local/fsl
-LC_CTYPE=en_US.UTF-8
 FIX_VERTEX_AREA=
-CONDA_DEFAULT_ENV=python3
-DISPLAY=/private/tmp/com.apple.launchd.ilT4yI8cDg/org.macosforge.xquartz:0
-FSLLOCKDIR=
-CONN_PATH=/Applications/MATLAB_R2016a.app/toolbox/conn/
-FSLOUTPUTTYPE=NIFTI_GZ
-MNI_DATAPATH=/Applications/freesurfer/mni/data
-FSL_DIR=/usr/local/fsl
-_=/Applications/freesurfer/bin/recon-all
-HOSTTYPE=unknown
-VENDOR=apple
-OSTYPE=darwin
-MACHTYPE=x86_64
-GROUP=staff
-HOST=CFMI-iMac-06.local
-OMP_NUM_THREADS=1
+COLORFGBG=7;0
+__CF_USER_TEXT_ENCODING=0x1F6:0x0:0x0
+FSLTCLSH=/usr/local/fsl/bin/fsltclsh
+ITERM_PROFILE=Default
 ITK_GLOBAL_DEFAULT_NUMBER_OF_THREADS=1
+EDITOR=emacs
+MNI_DIR=/Applications/freesurfer/mni
+LC_ALL=en_US.UTF-8
+HOSTTYPE=unknown
+PYDEF=2.7
+FSFAST_HOME=/Applications/freesurfer/fsfast
+GROUP=staff
+FSF_OUTPUT_FORMAT=.nii.gz
+FSLWISH=/usr/local/fsl/bin/fslwish
+CFMIDICOMDIR=/Volumes/CFMI-CFS/mnt/CFMI-DICOMS
+CONDA_PREFIX=/Users/cfmiadmin0/miniconda2/envs/python3
+TERM=xterm-256color
+FSL_BIN=/usr/local/fsl/bin
+HOST=CFMI-iMac-06.local
+LANG=C
+MAKELEVEL=1
 DYLD_LIBRARY_PATH=/Applications/freesurfer/lib/gcc/lib
-REQUIRE_FS_MATCH=0
